# RoboDriver

./: .gitmodules  README.md  pyproject.toml
operating_platform/core/: replayer.py
operating_platform/robot/: daemon.py
operating_platform/robot/robots/: configs.py  statuses.py  utils.py
operating_platform/robot/robots/so101_follower_dora/dora/nodes/dora_arm_so101/: main.py
operating_platform/robot/robots/so101_v1/: status.py
robodriver/dataset/visual/: visual_dataset.py
robodriver/robots/robodriver-robot-agilex-aloha-aio-dora/: README.md  pyproject.toml
robodriver/robots/robodriver-robot-agilex-aloha-aio-dora/dora/: dataflow.yml
robodriver/robots/robodriver-robot-agilex-aloha-aio-dora/robodriver_robot_agilex_aloha_aio_dora/: node.py
robodriver/robots/robodriver-robot-so101-aio-dora/: README.md
robodriver/robots/robodriver-robot-so101-aio-dora/dora/: dataflow.yml
robodriver/simulations/robodriver-sim-genesis-franka-aio-dora/: README.md
robodriver/simulations/robodriver-sim-genesis-franka-aio-dora/dora/: dataflow.yml
scripts/: record_with_sim.sh
