[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robodriver_robot_agilex_aloha_aio_dora"
version = "0.0.1"
description = ""
authors = [
    {name = "Xiang Yang",email = "ryu-yang@qq.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "dora-rs (>=0.3.11,<0.4.0)",
    "logging_mp",
]

[tool.setuptools.packages.find]
include = [
    "robodriver_robot_agilex_aloha_aio_dora",
    "lerobot_robot_agilex_aloha_aio_dora"
]

